--- a/Manual/Guitar Chords.html
+++ b/Manual/Guitar Chords.html
@@ -30,14 +30,14 @@
 
                 <ul>
                     <li class='translatable'>The module consists of a guitar fretboard, three level displays and a play button.</li>
-                    <li class='translatable'>To defuse the module, you must enter the given chord with the correct capo position at each of the three stages.</li>
-                    <li class='translatable'>Entering a wrong or invalid chord will reset the module and cause a strike.</li>
+                    <li class='translatable'>To defuse the module, you must enter the finger positions of the given chords at the capo position.</li>
+                    <li class='translatable'>Entering a wrong or invalid chord will cause a strike.</li>
                     <br>
                     <li class='translatable'>Use the chord chart to determine the position of each chord.</li>
                     <li class='translatable'>Press a fret to select it. Press it again to deselect it.</li>
                     <li class='translatable'>At each stage, the capo positions are determined by the tables below. Use the first condition that applies.</li>
                     <li class='translatable'>The capo position relocates the chord on the fretboard.</li>
-                    <li class='translatable'>For example, capo 3 will move any fingers on the first fret to the fourth fret. Capo 8 will move any fingers on the third fret to the eleventh fret etc.</li>
+                    <li class='translatable'>For example, capo 3 will move any fingers on the first fret to the fourth fret. Capo 8 will move any fingers on the third fret to the eleventh fret etc. Any empty strings are unaffected by the capo, and remain empty.</li>
                 </ul>
 
                 <h3 class='translatable'>Capo Position</h3>
